# physure

./: .gitignore  .mcp.json  BENCHMARKS.md  CLAUDE.md  Cargo.toml  LICENSE  MANIFEST.in  MIGRATION.md  MK-001_Best_Practices.md  Makefile  Pipfile  README.md  benchmark_vectorized.py  build.md  coverage.json  measurekit_core.pyi  mkdocs.yml  mypy.ini  pyproject.toml  roadmap.md  setup.py  sonar-project.properties  test_vectorized_unc.py
measurekit_core/: Cargo.toml
measurekit_core/scripts/: filter_lcov.py
measurekit_core/src/: covariance.rs  lib.rs  math.rs  quantity.rs  serialization.rs  uncertainty.rs  units.rs
physure-cli/: Cargo.toml
physure-cli/src/: config.rs  html.rs  katex_assets.rs  latex.rs  main.rs  protocol.rs  rich.rs  step.rs  tui.rs  web.rs
physure-cli/tests/: cli_tests.rs
physure-core/: .gitignore  Cargo.toml  README.md  lcov.info  pyproject.toml  sonar-project.properties
physure-core/.cargo/: config.toml
physure-core/benches/: core_benchmarks.rs
physure-core/examples/: quickstart.rs
physure-core/src/: covariance.rs  error.rs  lib.rs  math.rs  quantity.rs  serialization.rs  symbolic.rs  uncertainty.rs  units.rs
physure-core/src/covariance/: arrow.rs  mod.rs  pruning.rs  store.rs  tests.rs
physure-core/src/math/: hessian_propagation.rs
physure-core/src/symbolic/: ast.rs  compiler.rs  diff.rs  expr.rs  factor.rs  integrate.rs  mod.rs  tests.rs
physure-core/src/uncertainty/: gaussian.rs  mod.rs  monte_carlo.rs  trait_def.rs  unscented.rs
physure-core/src/units/: conf.rs  converters.rs  definition.rs  dimension.rs  mod.rs  parser.rs  physure.conf  rational.rs  registry.rs  tests.rs
physure-core/tests/: edge_cases_and_concurrency.rs
physure-java/: Cargo.toml  README.md
physure-java/java/com/physure/: NativeEngine.java  PhyFunction.java  PhysureException.java  Quantity.java  QuantityVector.java  UnitRegistry.java
physure-java/src/: lib.rs
physure-lsp/: Cargo.toml
physure-lsp/src/: main.rs
physure-python/: Cargo.toml  Makefile  README.md  physure_core.pyi  pyproject.toml  sonar-project.properties
physure-python/benchmarks/: benchmark_comparison.py  benchmark_lineage.py  benchmark_propagation.py  benchmark_vectorized.py  comprehensive_plot.py  profile_vectorized.py  run_compile_bench.py
physure-python/docs/: UNITS.md  chemistry_roadmap.md  diagrams_roadmap.md  index.md  scientific_roadmap.md  symbolic_math_roadmap.md  torch_compile_integration.md
physure-python/docs/reference/: quantity.md
physure-python/examples/: advanced_physics.py  pandas_integration.py  pinn_harmonic_oscillator.ipynb
physure-python/physure/: __init__.py  __init__.pyi  _core.pyi  constants.py  functional.py  pandas_ext.py  plotting.py  repl.py  symbolic.py
physure-python/physure/_jit/: tracer.py
physure-python/physure/application/: factories.py  fit_service.py  parsing.py  solver_service.py
physure-python/physure/backends/: jax_backend.py  numpy_backend.py  torch_backend.py
physure-python/physure/core/: __init__.py  dispatcher.py  formatting.py  functional.py  protocols.py  registry.pyi
physure-python/physure/domain/: exceptions.py
physure-python/physure/ext/: currency.py  grammar.py  helpers.py  io.py  pandas_support.py
physure-python/physure/nn/: utils.py
physure-python/physure/scripts/: generate_types.py
physure-python/python/physure/: __init__.py  cli.py  pandas_ext.py
physure-python/python/physure/ext/: io.py  (+2 more)
physure-python/scripts/: benchmark_import.py  compile_units.py  generate_constants_config.py  generate_units_readme.py
physure-python/src/: lib.rs
physure-python/tests/: conftest.py  strategies.py  test_ecosystem.py  test_equivalencies.py  test_jit_core.py  test_jit_uncertainty.py  test_new_features.py  test_performance_and_interop.py  test_plotting.py  test_repl.py  test_uncertainty.py  test_uncertainty_api.py  test_uncertainty_gum.py
physure-python/tests/core/: test_backends.py  test_backends_and_quantity.py  test_concurrency.py  test_consistency.py  test_covariance_store.py  test_functional.py  test_functional_core.py  test_functional_jax.py  test_gradients.py  test_invariants.py  test_jit.py  test_pydantic.py  test_registry.py  test_rust_parity.py  test_serialization.py  test_sparse_backends.py  test_vectorized_unc.py
physure-python/tests/dynamics/: test_fit_service.py  test_solver.py
physure-python/tests/ext/: test_autograd.py  test_chemistry_integration.py  test_compiler.py  test_currency.py  test_grammar.py  test_io.py  test_molar_equivalency.py  test_pandas_support.py  test_reaction.py  test_species.py  test_symbolic_regression.py  test_thermo_kinetics.py  test_torch_compile.py
physure-python/tests/functions/: test_functions.py
physure-python/tests/integration_tests/: test_measurement_system.py  test_physics_realworld.py  test_workflow.py
physure-python/tests/measurement_tests/: test_advanced.py  test_affine_arithmetic.py  test_api.py  test_autograd_propagation.py  test_backend_mixin.py  test_constants_codata.py  test_constants_module.py  test_conversions.py  test_conversions_realworld.py  test_correctness_fixes.py  test_dimensions.py  test_nonlinear_and_calculus.py  test_quantity.py  test_uncertainty_models.py  test_units.py
physure-python/tests/notation_tests/: test_base_entity.py  test_lexer.py  test_parser_failing_cases.py  test_parsers.py  test_parsers_full_coverage.py  test_token_buffer.py
physure-python/tests/performance/: benchmarks.py
physure-python/tests/pinn/: test_integration.py  test_nn_utils.py
physure-python/tests/symbolic/: test_calculus.py  test_native_coverage.py  test_native_expr.py  test_solve_all.py  test_solver.py  test_tracing.py
physure-python/tests/tools/: test_stub_gen.py
physure-script/: Cargo.toml
physure-script/src/: ast.rs  builtins.rs  exporter.rs  function.rs  interpreter.rs  lexer.rs  lib.rs  mod.rs  parser.rs  phs.pest  resolver.rs  value.rs
physure-script/src/codegen/: java.rs  mod.rs  python.rs  rust.rs  tests.rs
physure-script/src/symbolic/: ast.rs  compiler.rs  diff.rs  display.rs  expr.rs  integrate.rs  mod.rs  parser.rs  solve.rs  tests.rs
(+369 files in other folders)
