# physure — Cargo Workspace Orchestrator
# ─────────────────────────────────────────────────────────────────────────────
# All members share version, edition, license and repository through
# [workspace.package]. Each crate opts in with `key.workspace = true`.
# ─────────────────────────────────────────────────────────────────────────────

[workspace]
resolver = "2"
members  = [
    "physure-core",
    "physure-script",
    "physure-cli",
    "physure-python",
    "physure-lsp",
    "physure-java",
]

[workspace.package]
version     = "0.2.2"
edition     = "2021"
license     = "MIT"
repository  = "https://github.com/Alexisrx96/physure"
homepage    = "https://github.com/Alexisrx96/physure"
authors     = ["Irvin Torres <irvinrx1996@hotmail.com>"]
description = "High-performance physical dimension engine — Rust-first, zero-copy FFI."

# ── Shared dependency versions ─────────────────────────────────────────────
[workspace.dependencies]
physure-core   = { path = "physure-core" }
physure-script = { path = "physure-script" }
tower-lsp     = "0.20"
tokio         = { version = "1", features = ["full"] }
num-rational  = "0.4"
num-traits    = "0.2"
ndarray       = "0.15"
rand          = "0.8"
rand_distr    = "0.4"
nalgebra      = "0.32"
dyn-clone     = "1.0"
arrow         = "53.0"
chrono        = "0.4"
sprs          = "0.11"
smallvec      = "1.13"
criterion     = "0.5"
# abi3-py311 is the floor: pyo3::buffer::PyBuffer (zero-copy FFI) only exists in
# the limited API from Python 3.11. Must match requires-python in pyproject.toml.
pyo3          = { version = "0.25", features = ["extension-module", "abi3-py311"] }
numpy         = "0.25"

# ── Shared release profile ──────────────────────────────────────────────────
# panic must stay "unwind" (the default): both crates build as PyO3 extension
# modules (rlib/cdylib, no standalone binaries), and PyO3's panic -> PanicException
# conversion requires catch_unwind. "abort" would turn any Rust panic into a
# process-killing SIGABRT instead of a catchable Python exception.
[profile.release]
lto   = true
codegen-units = 1

[profile.dev]
# Faster incremental builds during development
opt-level = 0
debug     = true
