[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "measurekit"
dynamic = ["version"]
description = "High-performance physical dimension handling and unit conversion engine with multi-backend support."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Irvin Torres", email = "irvinrx1996@hotmail.com" }
]
keywords = [
    "units", "measurement", "conversion", "physics", "engineering",
    "science", "dimensional-analysis", "vectorization", "uncertainty"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typing-extensions>=4.15.0",
    "array-api-compat>=1.4",
    "measurekit-core",
]

[project.optional-dependencies]
numpy = ["numpy>=1.26.0", "scipy>=1.12.0", "numba>=0.59.0", "jaxtyping>=0.2.28"]
torch = ["torch>=2.2.0", "jaxtyping>=0.2.28"]
jax = ["jax>=0.4.25", "jaxlib>=0.4.25", "jaxtyping>=0.2.28"]
pandas = ["pandas>=2.2.0"]
pydantic = ["pydantic>=2.10.0"]
symbolic = ["sympy>=1.13.0"]
rich = ["rich>=13.0.0"]
io = ["h5py>=3.10.0", "pyarrow>=22.0.0", "xarray>=2024.1.0", "netCDF4>=1.6.0"]
all = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "numba>=0.59.0",
    "torch>=2.2.0",
    "jax>=0.4.25",
    "jaxlib>=0.4.25",
    "jaxtyping>=0.2.28",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
    "sympy>=1.13.0",
    "h5py>=3.10.0",
    "pyarrow>=22.0.0",
    "xarray>=2024.1.0",
    "netCDF4>=1.6.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-jupyter>=0.24.0",
    "mkdocs-htmlproofer-plugin>=0.12.0",
    "nbmake>=1.5.0",
    "papermill>=2.5.0",
    "matplotlib>=3.8.0",
]

[project.urls]
"Homepage" = "https://github.com/Alexisrx96/measurekit"
"Bug Reports" = "https://github.com/Alexisrx96/measurekit/issues"
"Source" = "https://github.com/Alexisrx96/measurekit"
"Documentation" = "https://measurekit.readthedocs.io/"

[tool.hatch.build.targets.wheel]
packages = ["measurekit"]

[tool.hatch.build]
ignore-vcs = true

[tool.uv]
managed = true

[tool.uv.sources]
measurekit-core = { path = "./measurekit_core" }

[tool.hatch.version]
path = "measurekit/__init__.py"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.98.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "maturin>=1.11.2",
    "beartype>=0.19.0",
    "psutil>=7.2.1",
    "pyarrow>=22.0.0",
]

[tool.ruff]
line-length = 79
target-version = "py310"
exclude = [
    ".ruff_cache",
    "__pycache__",
    "*.ipynb",
    "manual_sandbox/*",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E", "F", "UP", "B", "SIM", "I", "D", "N", "RUF", "TCH", "PT", "PYI"
]
ignore = ["D100", "D104", "N816"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["measurekit"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/*" = ["D", "S101"]
"manual_sandbox/*" = ["ALL"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests", "measurekit"]
addopts = "-ra --benchmark-disable --doctest-modules"
asyncio_mode = "strict"

[tool.coverage.run]
source = ["measurekit"]
branch = true
omit = [
    "**/__init__.py",
    "tests/*",
    "manual_sandbox/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = "measurekit.static.mypy_plugin"

[[tool.mypy.overrides]]
module = "measurekit.tests.*"
ignore_errors = true

[project.scripts]
measurekit = "measurekit.cli:main"

[project.entry-points."measurekit.units"]
meter = "measurekit.units.core:meter"
kilogram = "measurekit.units.core:kilogram"
second = "measurekit.units.core:second"
ampere = "measurekit.units.core:ampere"
kelvin = "measurekit.units.core:kelvin"
mole = "measurekit.units.core:mole"
candela = "measurekit.units.core:candela"
newton = "measurekit.units.core:newton"
joule = "measurekit.units.core:joule"
watt = "measurekit.units.core:watt"
pascal = "measurekit.units.core:pascal"
hertz = "measurekit.units.core:hertz"
coulomb = "measurekit.units.core:coulomb"
volt = "measurekit.units.core:volt"
ohm = "measurekit.units.core:ohm"
radian = "measurekit.units.core:radian"
steradian = "measurekit.units.core:steradian"
unity = "measurekit.units.core:unity"
