[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "measurekit"
dynamic = ["version"]
description = "High-performance physical dimension handling and unit conversion engine with multi-backend support."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Irvin Torres", email = "irvinrx1996@hotmail.com" }
]
keywords = [
    "units", "measurement", "conversion", "physics", "engineering",
    "science", "dimensional-analysis", "vectorization", "uncertainty"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Zero runtime dependencies: the Rust core and every integration are
# optional extras with pure-Python fallbacks.
dependencies = []

[project.optional-dependencies]
# Rust-accelerated core (RationalUnit, UnitRegistry, CovarianceStore)
native = ["measurekit-core"]
numpy = ["numpy>=1.26.0", "scipy>=1.12.0", "numba>=0.59.0", "jaxtyping>=0.2.28", "array-api-compat>=1.4"]
torch = ["torch>=2.2.0", "jaxtyping>=0.2.28", "array-api-compat>=1.4"]
jax = ["jax>=0.4.25", "jaxlib>=0.4.25", "jaxtyping>=0.2.28", "array-api-compat>=1.4"]
pandas = ["pandas>=2.2.0"]
pydantic = ["pydantic>=2.10.0"]
symbolic = ["sympy>=1.13.0", "symengine>=0.11.0"]
rich = ["rich>=13.0.0"]
io = ["h5py>=3.10.0", "pyarrow>=22.0.0", "xarray>=2024.1.0", "netCDF4>=1.6.0"]
all = [
    "measurekit-core",
    "array-api-compat>=1.4",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "numba>=0.59.0",
    "torch>=2.2.0",
    "jax>=0.4.25",
    "jaxlib>=0.4.25",
    "jaxtyping>=0.2.28",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
    "sympy>=1.13.0",
    "symengine>=0.11.0",
    "h5py>=3.10.0",
    "pyarrow>=22.0.0",
    "xarray>=2024.1.0",
    "netCDF4>=1.6.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-jupyter>=0.24.0",
    "mkdocs-htmlproofer-plugin>=0.12.0",
    "nbmake>=1.5.0",
    "papermill>=2.5.0",
    "matplotlib>=3.8.0",
]

[project.urls]
"Homepage" = "https://github.com/Alexisrx96/measurekit"
"Bug Reports" = "https://github.com/Alexisrx96/measurekit/issues"
"Source" = "https://github.com/Alexisrx96/measurekit"
"Documentation" = "https://measurekit.readthedocs.io/"

[tool.hatch.build.targets.wheel]
packages = ["measurekit"]

[tool.hatch.build.targets.sdist]
# ignore-vcs means .gitignore is not consulted; without this the sdist
# crawls .venv/ and measurekit_core/target/ (13+ GB)
only-include = ["measurekit"]

[tool.hatch.build]
ignore-vcs = true

[tool.uv]
managed = true

[tool.uv.sources]
measurekit-core = { path = "./measurekit_core" }

[tool.hatch.version]
path = "measurekit/__init__.py"

[dependency-groups]
dev = [
    "measurekit-core",
    "typing-extensions>=4.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.98.0",
    "ruff>=0.3.0",
    "maturin>=1.11.2",
    "beartype>=0.19.0",
    "psutil>=7.2.1",
    "pyarrow>=22.0.0",
    "ty>=0.0.56",
]

[tool.ruff]
line-length = 79
target-version = "py310"
exclude = [
    ".ruff_cache",
    "__pycache__",
    "*.ipynb",
    "manual_sandbox/*",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E", "F", "UP", "B", "SIM", "I", "D", "N", "RUF", "TCH", "PT", "PYI"
]
# N806/N803: uppercase locals (D, V, N, J...) follow physics/matrix notation
# D105/D107: magic methods and __init__ are covered by class docstrings
ignore = ["D100", "D104", "N816", "N806", "N803", "D105", "D107"]
fixable = ["ALL"]

[tool.ruff.lint.pycodestyle]
# The formatter targets 79; only lines it cannot split (long strings,
# comments, URLs) may run past, capped at 100.
max-line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["measurekit"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/*" = ["D", "S101", "E501", "E402"]
"manual_sandbox/*" = ["ALL"]
# Generated unit namespace ('l' = liter is E741 ambiguous but part of API)
"measurekit/units/core.py" = ["E741"]
# Generated artifacts: unit-name casing and line length are not ours to style
"measurekit/core/registry.pyi" = ["N815", "I001"]
"measurekit/_generated_types.py" = ["E501", "F401"]
# Dev tooling: docstring/style rules are noise outside the library
"benchmarks/*" = ["D", "E501", "E402", "F841", "RUF001"]
"examples/*" = ["D", "E501", "E402"]
"scripts/*" = ["D", "E501", "E402", "F841"]
"measurekit_core/scripts/*" = ["D", "E501"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests", "measurekit"]
addopts = "-ra --benchmark-disable --doctest-modules"
asyncio_mode = "strict"

[tool.coverage.run]
source = ["measurekit"]
branch = true
omit = [
    "**/__init__.py",
    "tests/*",
    "manual_sandbox/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["measurekit"]

[tool.ty.analysis]
allowed-unresolved-imports = [
    "torch.**",
    "jax.**",
    "scipy.**",
    "numpy.**",
    "sympy.**",
    "symengine.**",
    "pandas.**",
    "equinox.**",
    "h5py.**",
    "pyarrow.**",
    "xarray.**",
    "netCDF4.**",
]

[[tool.ty.overrides]]
include = [
    "measurekit/backends/**",
    "measurekit/nn/**",
    "measurekit/ext/**",
    "measurekit/pandas_ext.py",
    "measurekit/domain/measurement/quantity.py",
    "measurekit/domain/measurement/units.py",
    "measurekit/domain/measurement/uncertainty.py",
    "measurekit/domain/measurement/system.py",
    "measurekit/domain/measurement/vectorized_uncertainty.py",
    "measurekit/domain/measurement/_backend_mixin.py",
    "measurekit/domain/measurement/_arithmetic_mixin.py",
    "measurekit/domain/symbolic/**",
    "measurekit/core/dispatcher.py",
    "measurekit/core/protocols.py",
    "measurekit/core/functional.py",
    "measurekit/application/**",
    "measurekit/_jit/**",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
invalid-assignment = "ignore"
invalid-method-override = "ignore"
unsupported-operator = "ignore"
call-non-callable = "ignore"
invalid-type-form = "ignore"
no-matching-overload = "ignore"
parameter-already-assigned = "ignore"
unresolved-import = "ignore"
invalid-type-arguments = "ignore"
unused-type-ignore-comment = "ignore"
redundant-cast = "ignore"

[tool.basedpyright]
include = ["measurekit"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
# ponytail: rules below are inherent to this codebase's design (optional-dep
# None fallbacks, lazy __getattr__ exports for the import-time budget,
# untyped third-party libs) — advisory like ty, not gated. Real diagnostics
# are fixed in code instead of suppressed. The unknown/any family is enforced
# (see below) for everything except the adapter paths re-exempted under
# [tool.basedpyright.executionEnvironments] and the protocols.py header.
reportAny = "error"
reportExplicitAny = "error"
reportUnknownMemberType = "error"
reportUnknownVariableType = "error"
reportUnknownArgumentType = "error"
reportUnknownParameterType = "error"
reportMissingParameterType = "error"
reportUnknownLambdaType = false
reportMissingTypeStubs = false
reportMissingTypeArgument = false
reportImplicitOverride = false
reportUnusedCallResult = false
reportUnannotatedClassAttribute = false
reportImplicitStringConcatenation = false
reportPrivateUsage = false
reportPrivateLocalImportUsage = false
reportUntypedBaseClass = false
reportImportCycles = false
reportOptionalMemberAccess = false
reportAttributeAccessIssue = false
reportInvalidTypeForm = false
reportUnsupportedDunderAll = false
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = false
too-many-positional-arguments = "ignore"
unsupported-base = "ignore"
not-subscriptable = "ignore"
invalid-overload = "ignore"
unknown-argument = "ignore"
invalid-parameter-default = "ignore"

# ponytail: backend adapters and generated unit stubs work at the raw
# array/scalar boundary by design (Numeric = ndarray | Tensor | jax.Array |
# float, never narrowed there) — re-exempt the unknown/any family enforced
# above instead of sprinkling per-line ignores across every adapter method.
[[tool.basedpyright.executionEnvironments]]
root = "measurekit/backends"
reportAny = false
reportExplicitAny = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingParameterType = false

[[tool.basedpyright.executionEnvironments]]
root = "measurekit/units"
reportAny = false
reportExplicitAny = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingParameterType = false

[project.scripts]
measurekit = "measurekit.cli:main"

[project.entry-points."measurekit.units"]
meter = "measurekit.units.core:meter"
kilogram = "measurekit.units.core:kilogram"
second = "measurekit.units.core:second"
ampere = "measurekit.units.core:ampere"
kelvin = "measurekit.units.core:kelvin"
mole = "measurekit.units.core:mole"
candela = "measurekit.units.core:candela"
newton = "measurekit.units.core:newton"
joule = "measurekit.units.core:joule"
watt = "measurekit.units.core:watt"
pascal = "measurekit.units.core:pascal"
hertz = "measurekit.units.core:hertz"
coulomb = "measurekit.units.core:coulomb"
volt = "measurekit.units.core:volt"
ohm = "measurekit.units.core:ohm"
radian = "measurekit.units.core:radian"
steradian = "measurekit.units.core:steradian"
unity = "measurekit.units.core:unity"
