[package]
name = "measurekit_core"
version = "0.1.2"
edition = "2021" 

[lib]
name = "measurekit_core"
crate-type = ["cdylib"]

[dependencies]
# enabling "extension-module" is required for Python
pyo3 = { version = "0.23", features = ["extension-module"] } 
num-rational = "0.4"
num-traits = "0.2"
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"
nalgebra = "0.32"
dyn-clone = "1.0"
arrow = "53.0"
chrono = "0.4"
sprs = "0.11"
numpy = "0.23"
