[package]
name = "measurekit-core"
version = "0.1.11"
edition = "2021"
description = "Core Rust implementation for MeasureKit"
license = "MIT"
repository = "https://github.com/Alexisrx96/measurekit"
homepage = "https://github.com/Alexisrx96/measurekit"
readme = "README.md"

[lib]
name = "measurekit_core"
crate-type = ["staticlib", "rlib"]

[dependencies]
# enabling "extension-module" is required for Python
# abi3-py310: one wheel per platform, forward-compatible with future CPythons
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
num-rational = "0.4"
num-traits = "0.2"
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"
nalgebra = "0.32"
dyn-clone = "1.0"
arrow = "53.0"
chrono = "0.4"
sprs = "0.11"
numpy = "0.23"

[profile.release]
panic = "abort"
lto = true
