[package]
name = "physure-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Native Language Server Protocol (LSP) server for Physure PHS language written in Rust."

[dependencies]
physure-core.workspace = true
physure-script.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
