[build-system]
requires      = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name        = "physure"
version     = "0.2.1"
description = "High-performance physical dimension engine. Rust-first, zero-copy FFI. Successor to physure."
readme      = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors     = [
    { name = "Irvin Torres", email = "irvinrx1996@hotmail.com" }
]
keywords = [
    "units", "measurement", "conversion", "physics", "engineering",
    "science", "dimensional-analysis", "uncertainty", "rust", "ffi"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Rust-first: the native core is a hard dependency, not an extra.
# Zero Python-only fallback by design.
dependencies = []

[project.optional-dependencies]
numpy   = ["numpy>=1.26.0", "scipy>=1.12.0", "numba>=0.59.0", "jaxtyping>=0.2.28", "array-api-compat>=1.4"]
torch   = ["torch>=2.2.0", "jaxtyping>=0.2.28", "array-api-compat>=1.4"]
jax     = ["jax>=0.4.25", "jaxlib>=0.4.25", "jaxtyping>=0.2.28", "array-api-compat>=1.4"]
pandas  = ["pandas>=2.2.0"]
pydantic = ["pydantic>=2.10.0"]
symbolic = ["sympy>=1.13.0", "symengine>=0.11.0"]
rich    = ["rich>=13.0.0"]
io      = ["h5py>=3.10.0", "pyarrow>=22.0.0", "xarray>=2024.1.0", "netCDF4>=1.6.0"]
all     = [
    "array-api-compat>=1.4",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "numba>=0.59.0",
    "torch>=2.2.0",
    "jax>=0.4.25",
    "jaxlib>=0.4.25",
    "jaxtyping>=0.2.28",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
    "sympy>=1.13.0",
    "symengine>=0.11.0",
    "h5py>=3.10.0",
    "pyarrow>=22.0.0",
    "xarray>=2024.1.0",
    "netCDF4>=1.6.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-jupyter>=0.24.0",
    "mkdocs-htmlproofer-plugin>=0.12.0",
    "nbmake>=1.5.0",
    "papermill>=2.5.0",
    "matplotlib>=3.8.0",
]

[project.urls]
"Homepage"      = "https://github.com/Alexisrx96/physure"
"Bug Reports"   = "https://github.com/Alexisrx96/physure/issues"
"Source"        = "https://github.com/Alexisrx96/physure"
"Documentation" = "https://physure.readthedocs.io/"

# ── Maturin configuration ────────────────────────────────────────────────────
# maturin builds the Rust extension from physure-python/
[tool.maturin]
python-source   = "."
manifest-path   = "Cargo.toml"
module-name     = "physure._core"
features        = ["pyo3/extension-module"]

# ── UV ────────────────────────────────────────────────────────────────────────
[tool.uv]
managed = true

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 79
target-version = "py311"
exclude = [
    ".ruff_cache", "__pycache__", "*.ipynb", ".venv",
    "physure/_generated_types.py", "physure/core/registry.pyi",
]

[tool.ruff.lint]
select  = ["E", "F", "UP", "B", "SIM", "I", "D", "N", "RUF", "TCH", "PT", "PYI"]
ignore  = ["D100", "D104", "N816", "N806", "N803", "D105", "D107"]
fixable = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["physure"]

[tool.ruff.lint.per-file-ignores]
"__init__.py"        = ["E402", "F401"]
"tests/*"            = ["D", "S101", "E501", "E402"]
"benchmarks/*"       = ["D", "E501", "E402", "F841", "RUF001"]
"examples/*"         = ["D", "E501", "E402"]
"scripts/*"          = ["D", "E501", "E402", "F841"]
"physure/units/core.py" = ["E741"]
"physure/core/registry.pyi" = ["N815"]
"physure/__init__.py" = ["RUF022"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests", "python/physure"]
addopts   = "-ra --benchmark-disable --doctest-modules"
asyncio_mode = "strict"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["physure"]
branch = true
omit   = ["**/__init__.py", "tests/*"]

[tool.coverage.report]
fail_under   = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

# ── Dev dependency group ──────────────────────────────────────────────────────
[dependency-groups]
dev = [
    "typing-extensions>=4.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.98.0",
    "ruff>=0.3.0",
    "maturin>=1.11.2",
    "beartype>=0.19.0",
    "psutil>=7.2.1",
    "pyarrow>=22.0.0",
    "ty>=0.0.56",
    "numpy>=1.26.0",
]

# ── CLI entry point ───────────────────────────────────────────────────────────
[project.scripts]
physure = "physure.cli:main"

[project.entry-points."physure.units"]
meter     = "physure.units.core:meter"
kilogram  = "physure.units.core:kilogram"
second    = "physure.units.core:second"
ampere    = "physure.units.core:ampere"
kelvin    = "physure.units.core:kelvin"
mole      = "physure.units.core:mole"
candela   = "physure.units.core:candela"
newton    = "physure.units.core:newton"
joule     = "physure.units.core:joule"
watt      = "physure.units.core:watt"
pascal    = "physure.units.core:pascal"
hertz     = "physure.units.core:hertz"
coulomb   = "physure.units.core:coulomb"
volt      = "physure.units.core:volt"
ohm       = "physure.units.core:ohm"
radian    = "physure.units.core:radian"
steradian = "physure.units.core:steradian"
unity     = "physure.units.core:unity"
